@@ -1,5 +1,5 @@
 <?php
-if(!isset($_REQUEST['_ROSARIO_PDF']) && (!$_REQUEST['search_modfunc'] || $_REQUEST['search_modfunc']=='search' || $_ROSARIO['modules_search']))
+if(!isset($_REQUEST['_ROSARIO_PDF']) && !$_REQUEST['search_modfunc'])
 {
 	DrawHeader(ProgramTitle());
 
@@ -14,10 +14,11 @@ else
 	$_REQUEST['print_statements'] = true;
 
 	if(User('PROFILE')=='teacher')//limit to teacher himself
-		$extra['WHERE'] .= " AND s.STAFF_ID = '".$_SESSION['STAFF_ID']."'";
+		$extra['WHERE'] .= " AND s.STAFF_ID = '".User('STAFF_ID')."'";
 		
 //modif Francois: fix Advanced Search
 	StaffWidgets('all');
+	$extra['WHERE'] .= appendStaffSQL('',$extra);
 	$extra['WHERE'] .= CustomFields('where','staff');
 	$RET = GetStaffList($extra);
 	if(count($RET))
@@ -38,7 +39,7 @@ else
 				include('modules/Accounting/StaffPayments.php');
 				echo '<div style="page-break-after: always;"></div>';
 		}
-		SetUserStaffID($SESSION_staff_id_save);
+		$_SESSION['staff_id'] = $SESSION_staff_id_save;
 
 		PDFStop($handle);
 	}
