@@ -79,7 +79,8 @@ if($_REQUEST['modfunc']=='update' && AllowEdit())
 	unset($_REQUEST['can_use']);
 	unset($_SESSION['_REQUEST_vars']['can_use']);
 }
-if(UserStaffID() && (empty($_REQUEST['modfunc']) || $_REQUEST['modfunc'] == 'search_fnc'))
+
+if(UserStaffID() && empty($_REQUEST['modfunc']))
 {
 $staff_RET = DBGet(DBQuery("SELECT FIRST_NAME,LAST_NAME,PROFILE,PROFILE_ID FROM STAFF WHERE STAFF_ID='".UserStaffID()."'"));
 
