@@ -1,6 +1,8 @@
 <?php
-//if($_REQUEST['modfunc']=='search_fnc' || !$_REQUEST['modfunc'])
-if($_REQUEST['search_modfunc']=='search_fnc' || !$_REQUEST['search_modfunc'])
+if(Preferences('SEARCH')!='Y' && !$extra['force_search'])
+	$_REQUEST['search_modfunc'] = 'list';
+
+if(!$_REQUEST['search_modfunc'])
 {
 	switch(User('PROFILE'))
 	{
@@ -21,7 +23,7 @@ if($_REQUEST['search_modfunc']=='search_fnc' || !$_REQUEST['search_modfunc'])
 
 			PopTable('header',$extra['search_title']?$extra['search_title']:_('Find a User'));
 
-			echo '<FORM name="search" id="search" action="Modules.php?modname='.$_REQUEST['modname'].'&modfunc='.$_REQUEST['modfunc'].'&search_modfunc=list&next_modname='.$_REQUEST['next_modname'].'&advanced='.$_REQUEST['advanced'].$extra['action'].'" method="POST">';
+			echo '<FORM name="search" id="search" action="Modules.php?modname='.$_REQUEST['modname'].'&modfunc='.$_REQUEST['modfunc'].'&search_modfunc=list&next_modname='.$_REQUEST['next_modname'].'&advanced='.$_REQUEST['advanced'].$extra['action'].'" method="GET">';
 
 			echo '<TABLE><TR class="valign-top"><TD>';
 
